--- a/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
+++ b/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Microsoft.Orleans.Server" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Orleans.Iterator.Abstraction\Orleans.Iterator.Abstraction.csproj" />
+    <ProjectReference Include="..\Orleans.Iterator.AdoNet\Orleans.Iterator.AdoNet.csproj" />
+  </ItemGroup>
+
 </Project>
