--- a/src/Orleans.Iterator.Abstraction/Orleans.Iterator.Abstraction.csproj
+++ b/src/Orleans.Iterator.Abstraction/Orleans.Iterator.Abstraction.csproj
@@ -14,11 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="https:\github.com\BernhardPollerspoeck\Orleans-Iterator\blob\master\README.md" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Orleans.Runtime" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Sdk" Version="7.0.0" />
   </ItemGroup>
 
 
