Add .csproj support for configuration via .NET Secrets, env vars, and appsettings.json

--- a/src/Orleans.Iterator.Dev.Server/Orleans.Iterator.Dev.Server.csproj
+++ b/src/Orleans.Iterator.Dev.Server/Orleans.Iterator.Dev.Server.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>9e6e286d-8a18-4ca1-9ed9-471984bf7c2e</UserSecretsId>
   </PropertyGroup>
 
 
