--- a/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
+++ b/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.Orleans.Client" Version="7.0.0" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="7.1.2" />
     <PackageReference Include="MySql.Data" Version="8.0.32" />
   </ItemGroup>
 
