--- a/src/Orleans.Iterator.Abstraction/Orleans.Iterator.Abstraction.csproj
+++ b/src/Orleans.Iterator.Abstraction/Orleans.Iterator.Abstraction.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -14,8 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Orleans.Runtime" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Orleans.Sdk" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Runtime" Version="8.0.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0-rc1" />
   </ItemGroup>
 
 
