--- a/src/Orleans.Iterator.Dev.Server/Orleans.Iterator.Dev.Server.csproj
+++ b/src/Orleans.Iterator.Dev.Server/Orleans.Iterator.Dev.Server.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UserSecretsId>9e6e286d-8a18-4ca1-9ed9-471984bf7c2e</UserSecretsId>
@@ -18,13 +18,13 @@
 
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-    <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Orleans.Persistence.AdoNet" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="7.0.0" />
-    <PackageReference Include="MySql.Data" Version="8.0.32" />
-    <PackageReference Include="Microsoft.Orleans.Server" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="8.0.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="8.0.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.Persistence.AdoNet" Version="8.0.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="8.0.0-rc1" />
+    <PackageReference Include="MySql.Data" Version="8.2.0" />
+    <PackageReference Include="Microsoft.Orleans.Server" Version="8.0.0-rc1" />
   </ItemGroup>
 
   <ItemGroup>
