--- a/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
+++ b/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
@@ -2,18 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UserSecretsId>77d13622-e2dd-469a-8c54-0b75e59dd15e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-    <PackageReference Include="Microsoft.Orleans.Client" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="7.0.0" />
-    <PackageReference Include="MySql.Data" Version="8.0.32" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Client" Version="8.0.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="8.0.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="8.0.0-rc1" />
+    <PackageReference Include="MySql.Data" Version="8.2.0" />
   </ItemGroup>
 
   <ItemGroup>
