--- a/Orleans.Iterator.Dev.Grains/Orleans.Iterator.Dev.Grains.csproj
+++ b/Orleans.Iterator.Dev.Grains/Orleans.Iterator.Dev.Grains.csproj
@@ -8,8 +8,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="8.0.0-rc1" />
-    <PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0" />
   </ItemGroup>
 
   
