--- a/src/Orleans.Iterator.Azure/Orleans.Iterator.Azure.csproj
+++ b/src/Orleans.Iterator.Azure/Orleans.Iterator.Azure.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>8.0.0.1-rc1</Version>
+    <Version>8.0.0.1</Version>
     <Title>Orleans.Iterator.Azure</Title>
     <Authors>Bernhard Pollerspöck</Authors>
     <Company>qsp</Company>
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Orleans.Iterator.Abstraction\Orleans.Iterator.Abstraction.csproj" />
-    <PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
   </ItemGroup>
 
