--- a/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
+++ b/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
@@ -10,9 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Orleans.Client" Version="8.0.0-rc1" />
-    <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="8.0.0-rc1" />
-    <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="8.0.0-rc1" />
+    <PackageReference Include="Microsoft.Orleans.Client" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="8.0.0" />
     <PackageReference Include="MySql.Data" Version="8.2.0" />
   </ItemGroup>
 
