--- a/src/Orleans.Iterator.Dev.Server/Orleans.Iterator.Dev.Server.csproj
+++ b/src/Orleans.Iterator.Dev.Server/Orleans.Iterator.Dev.Server.csproj
@@ -21,8 +21,10 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="8.0.0" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.Redis" Version="8.0.0" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AdoNet" Version="8.0.0" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Persistence.Redis" Version="8.0.0" />
     <PackageReference Include="MySql.Data" Version="8.2.0" />
     <PackageReference Include="Microsoft.Orleans.Server" Version="8.0.0" />
   </ItemGroup>
@@ -32,6 +34,7 @@
     <ProjectReference Include="..\Orleans.Iterator.Abstraction\Orleans.Iterator.Abstraction.csproj" />
     <ProjectReference Include="..\Orleans.Iterator.AdoNet\Orleans.Iterator.AdoNet.csproj" />
     <ProjectReference Include="..\Orleans.Iterator.Azure\Orleans.Iterator.Azure.csproj" />
+    <ProjectReference Include="..\Orleans.Iterator.Redis\Orleans.Iterator.Redis.csproj" />
   </ItemGroup>
 
 
