--- a/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
+++ b/src/Orleans.Iterator.Dev/Orleans.Iterator.Dev.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Orleans.Client" Version="8.0.0" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="8.0.0" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.Redis" Version="8.0.0" />
     <PackageReference Include="MySql.Data" Version="8.2.0" />
   </ItemGroup>
 
