--- a/src/Orleans.Iterator.Redis/Orleans.Iterator.Redis.csproj
+++ b/src/Orleans.Iterator.Redis/Orleans.Iterator.Redis.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.Analyzers" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.23" />
   </ItemGroup>
